# microemacs

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile.in  README  README.md  configure  configure.ac  infolist.txt  license.txt
memsdev/: commands.cpp  commands.h  dsaddin.cpp  dsaddin.h  maindialog.cpp  maindialog.h  memsdev.aps  memsdev.clw  memsdev.cpp  memsdev.def  memsdev.dsp  memsdev.dsw  memsdev.h  memsdev.odl  memsdev.rc  memsdev.txt  readme.txt  resource.h  response.cpp  response.h  stdafx.cpp  stdafx.h
memsdev/res/: memsdev.rc2
msdev6/: memsdev6.dsp  memsdev6.dsw
src/: CMakeLists.txt  Makefile.am  Makefile.in  abbrev.c  aix4.gmk  aix4.mak  aix5.gmk  aix5.mak  basic.c  bfs.c  bfs.h  bind.c  buffer.c  build  build.bat  build.txt  config.h.in  crypt.c  cygwin.gmk  cygwin.txt  darwin.gmk  dirlist.c  display.c  dosdj1.mak  dosdj2.mak  dosterm.c  ebind.def  ebind.h  edef.h  eextrn.h  efunc.def  efunc.h  emain.h  emode.def  emode.h  eopt.h  eprint.def  eprint.h  esearch.h  eskeys.def  (+83 more)
src/macros/: 2dos.emf  2mac.emf  2unix.emf  2win.emf  abbrev.emf  abbrlist.emf  ada.eaf  aix.emf  asmx86.etf  asn1.etf  au3.eaf  au3.etf  benchmrk.emf  bibtex.etf  bookmark.emf  buffinit.emf  c.eaf  c.etf  calc.emf  cfind.emf  cfm.eaf  cfm.etf  charset.emf  charsutl.emf  clearcs.emf  cmacros.emf  cobol.etf  collapse.emf  comment.emf  cpp.etf  crosswd.emf  ctags.emf  cvs.emf  cygwin.emf  darwin.emf  dmf.emf  doc.etf  docmacro.emf  docutl.emf  dos.emf  (+291 more)
src/win32s/: methnk16.c  methnk16.def  readme.txt  win16.mak
vc10/: me.sln  me.vcxproj  me.vcxproj.filters
