bin_PROGRAMS = me
AM_CPPFLAGS = -D_ME_WINDOW -D_WIN32

me_SOURCES = abbrev.c     basic.c bind.c       buffer.c     crypt.c      dirlist.c\
    display.c \
eval.c       exec.c       file.c       fileio.c     frame.c      hilight.c    history.c    input.c      isearch.c \
key.c        line.c       macro.c      main.c       narrow.c     next.c       osd.c        print.c      random.c \
regex.c      region.c     registry.c   search.c     spawn.c      spell.c      tag.c        termio.c     time.c \
undo.c       window.c     winprint.c   winterm.c    word.c

AM_LDFLAGS = -luser32 -lgdi32 -lwinspool -lcomdlg32
