bin_PROGRAMS = me
AM_CPPFLAGS = -D_ME_WINDOW -D_LINUX -D_LINUX26 -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_ME_CONSOLE

me_SOURCES = abbrev.c     basic.c bind.c       buffer.c     crypt.c      dirlist.c termio.c\ 
    display.c \
eval.c       exec.c       file.c       fileio.c     frame.c      hilight.c    history.c    input.c      isearch.c \
key.c        line.c       macro.c      main.c       narrow.c     next.c       osd.c        print.c      random.c \
regex.c      region.c     registry.c   search.c     spawn.c      spell.c      tag.c        time.c \
undo.c       window.c     unixterm.c    word.c
AM_LDFLAGS = -lX11 -lncurses -ltermcap
